@@ -6777,3 +6777,6 @@ PACKAGE: 2.2.99.2
 2008-01-15 tdb
  * Check whether an executable is set as "NOTFOUND", fixing #2874
 
+2008-01-15 cjg
+ * Added code to keep track of which phrases were used during a $session
+ * Added code to report on this, but currently disabled the report.
